# inventree-import-plugin

./: .gitignore  package.json  pyproject.toml
.mulch/: mulch.config.yaml
.mulch/expertise/: architecture.jsonl  inventree-plugin.jsonl  lcsc.jsonl  mouser.jsonl
.overstory/: config.yaml
frontend/: .gitignore  package-lock.json  package.json  tsconfig.app.json  tsconfig.node.json  vite.bulk.config.js  vite.bulk.config.ts  vite.config.js  vite.config.ts  vite.dev.config.js  vite.dev.config.ts
frontend/src/: EnrichPanelV2.tsx  EnrichPanelV3.tsx  Panel.tsx  Settings.tsx  StandaloneBulkPage.tsx
inventree_import_plugin/: __init__.py  base.py  compat.py  core.py  lcsc_plugin.py  models.py  mouser_plugin.py
inventree_import_plugin/api/: __init__.py  views.py
inventree_import_plugin/providers/: __init__.py  aliexpress.py  base.py  lcsc.py  mouser.py  registry.py
inventree_import_plugin/services/: __init__.py  enrich.py
inventree_import_plugin/static/: EnrichPanel-BzaX27yJ.js  EnrichPanel-BzaX27yJ.js.map  EnrichPanel-X6TYnH12.js  EnrichPanel-X6TYnH12.js.map  EnrichPanel.js  EnrichPanel.js.map  EnrichPanelV2-BpVojXJN.js  EnrichPanelV2-BpVojXJN.js.map  EnrichPanelV2-CFkWKvOu.js  EnrichPanelV2-CFkWKvOu.js.map  EnrichPanelV2-CKuuvbom.js  EnrichPanelV2-CKuuvbom.js.map  EnrichPanelV2-CZoWNh6O.js  EnrichPanelV2-CZoWNh6O.js.map  EnrichPanelV2-C_FVBkRx.js  EnrichPanelV2-C_FVBkRx.js.map  EnrichPanelV2-D2opaWn7.js  EnrichPanelV2.js  (+79 more)
tests/: conftest.py  test_aliexpress.py  test_core_plugin.py  test_enrich.py  test_lcsc.py  test_lcsc_plugin.py  test_models.py  test_mouser.py
(+13 files in other folders)
