

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "inventree-import-plugin"
version = "0.2.5"
description = "Combined InvenTree supplier import and enrich plugin for Mouser and LCSC"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = ["requests>=2.28"]

[project.optional-dependencies]
dev = ["pytest", "pytest-cov", "ruff", "mypy"]

[project.entry-points."inventree_plugins"]
InvenTreeImportPlugin = "inventree_import_plugin.core:InvenTreeImportPlugin"

[tool.setuptools.packages.find]
where = ["."]
include = ["inventree_import_plugin*"]

[tool.setuptools.package-data]
inventree_import_plugin = ["static/**/*", "static/.vite/*", "templates/**/*.html"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
